--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,36 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --title-font-weight: 700;
+  --text-font-weight: 400;
+  --bg-color: #FFF;
+  --accent-color: #000;
+  --bg-image-color_1: #d3d3d3;
+  --bg-image-color_2: #e7e7e7;
+  --bg-image-color_3: #1a1a1a;
+}
+
+:root.theme-dark {
+  --title-font-weight: 785;
+  --text-font-weight: 465;
+  --bg-color: #000;
+  --accent-color: #00CC14;
+  --bg-image-color_1: #000;
+  --bg-image-color_2: #007f0c;
+  --bg-image-color_3: #004306;
+}
+
+@media (prefers-color-scheme: dark) {
+  
+    :root {
+      --title-font-weight: 785;
+      --text-font-weight: 465;
+      --bg-color: #000;
+      --accent-color: #00CC14;
+      --bg-image-color_1: #000;
+      --bg-image-color_2: #007f0c;
+      --bg-image-color_3: #004306;
+    }
+
+}
