--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,13 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --main-font: 'Inter-Variable', sans-serif;
+  --accent-font: 'PressStart2P', sans-serif;
+  --title-font-weight: 700;
+  --text-font-weight: 400;
+  --bg-color: #FFF;
+  --accent-color: #000;
+  --bg-image-color_1: #d3d3d3;
+  --bg-image-color_2: #e7e7e7;
+  --bg-image-color_3: #1a1a1a;
+}
