--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,8 @@
   color: var(--accent-color);
   background-color: var(--bg-color);
   background-image:
-    repeating-linear-gradient(90deg, var(--bg-image-color_1), transparent 2px),
-    repeating-linear-gradient(var(--bg-image-color_1), transparent 2px),
+    repeating-linear-gradient(90deg, var(--bg-image-color_1), transparent 2px 4px),
+    repeating-linear-gradient(var(--bg-image-color_1), transparent 2px 4px),
     linear-gradient(var(--bg-image-color_2), var(--bg-image-color_3));
   background-size: cover;
   background-position: center;
@@ -85,12 +85,12 @@
 .theme-menu__button::after {
   content: '';
   display: block;
-  width: 0%;
+  inline-size: 0%;
   height: 2px;
   margin-top: 2px;
   background-color: var(--accent-color);
   /*transform: scaleX(0);*/
-  transition: width .3s ease, opacity .3s ease;
+  transition: inline-size .3s ease, opacity .3s ease;
 }
 
 .theme-menu__button:focus {
@@ -100,7 +100,7 @@
 
 .theme-menu__button:focus-visible::after {
   /*transform: scaleX(1);*/
-  width: 100%;
+  inline-size: 100%;
 }
 
 .theme-menu__button:hover {
@@ -223,30 +223,154 @@
   padding: 25px;
 }
 
-.card__icon-button {
+/* --------------------LIKE_button-------------------- */
+
+.card__heart-button {
   display: flex;
   background-color: inherit;
-  border: none;
+  /*background-color: var(--bg-color);*/
+  block-size: 38px;
+  cursor: unset;
+  border: 2px solid transparent;
+  transition: border .3s ease;
+}
+
+.card__heart-button:focus {
+  outline: none;
+}
+
+.card__heart-button:focus-visible {
+  border: 2px solid var(--accent-color);
 }
 
 .like-icon {
-  margin: auto;
-  fill: var(--accent-color);
+  /*margin: auto;
+  fill: var(--accent-color);*/
+  cursor: pointer;
 }
 
+/* ---------♥♥♥HEART♥♥♥--------- */
+
+.like-icon.is-liked .heart {
+  transform-origin: 50% 50%;
+  animation: scale .3s ease-in alternate .1s;
+}
+
+@keyframes scale {
+  
+  to {
+    transform: scale(1.5);
+  }
+}
+
+/* ------------C♥RE------------- */
+
+.core {
+  transition: fill .3s ease .03s;
+}
+
+.like-icon:hover .core {
+  fill: var(--accent-color);
+  transition: fill .3s ease;
+}
+
+.like-icon:active .core {
+  fill: #FF0000;
+  transition: fill .3s ease;
+}
+
+.like-icon.is-liked .core {
+  fill: #FF0000;
+  transition: fill .3s ease;
+}
+
+/* ------------B♥DY------------- */
+
+.main-body {
+  transition: fill .3s ease;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill .3s ease .05s;
+}
+
+.like-icon:active .main-body {
+  fill: #FF0000;
+  transition: fill .3s ease .05s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: #FF0000;
+  transition: fill .3s ease .05s;
+}
+
+/* ------------C♥NT♥UR------------- */
+
+.contour {
+  transition: fill .3s ease;
+}
+
+.like-icon.is-liked .contour {
+  fill: #FF0000;
+  transition: fill .3s ease .06s;
+}
+
+/* ------------SPARKS------------- */
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  animation: opacity .3s ease-in alternate .2s;
+}
+
+@keyframes opacity {
+  to {
+    opacity: 1;
+  }
+}
+
+/* --------------------LIKE_button-------------------- */
+
 .card__like-button {
-  width: 130px;
-  height: 38px;
+  position: relative;
+  inline-size: 130px;
+  block-size: 38px;
   padding: 9px 17px;
   border: 2px solid var(--accent-color);
   background-color: var(--bg-color);
+  transition: box-shadow .3s ease;
+}
+
+.card__like-button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  inline-size: 0%;
+  background-color: var(--accent-color);
+  transition: inline-size .5s ease-in-out;
+}
+
+.card__like-button:hover::after {
+  inline-size: 100%;
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 .button__text {
+  position: relative;
+  z-index: 5;
   font-family: var(--accent-font);
   font-size: 14px;
   font-weight: var(--text-font-weight);
   line-height: 90%;
+  color: var(--button-hover-color);
+  mix-blend-mode: difference;
 }
 
 /* --------------------FOOTER-------------------- */
@@ -258,6 +382,7 @@
 }
 
 .save-button {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -266,11 +391,35 @@
   padding: 15px 20px;
   border: 2px solid var(--accent-color);
   background-color: var(--bg-color);
+  transition: box-shadow .3s ease;
+}
+
+.save-button:after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  inline-size: 0%;
+  background-color: var(--accent-color);
+  transition: inline-size .5s ease-in-out;
+}
+
+.save-button:hover::after {
+  inline-size: 100%;
+}
+
+.save-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 .save-button-icon {
+  position: relative;
+  z-index: 5;
   inline-size: 28px;
   block-size: 28px;
+  fill: var(--button-hover-color);
+  stroke:1px var(--button-hover-color);
+  mix-blend-mode: difference;
 }
 
 /* --------------------MEDIA-------------------- */
