--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,6 +7,7 @@
   --text-font-weight: 400;
   --bg-color: #FFF;
   --accent-color: #000;
+  --button-hover-color: #FFF;
   --bg-image-color_1: #d3d3d3;
   --bg-image-color_2: #e7e7e7;
   --bg-image-color_3: #1a1a1a;
