layout+anim+dialog

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,74 @@
   background-attachment: fixed;
 }
 
+/* --------------------DIALOG-------------------- */
+
+.dialog {
+  inline-size: 341px;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  padding: 30px 40px;
+  margin: auto;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.dialog__content {
+  /*display: flex;
+  gap: 20px;
+  align-items: center;*/
+  display: grid;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  gap: 20px;
+  align-items: center;
+  color: var(--accent-color);
+  margin-block-end: 30px;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: var(--text-font-weight);
+  line-height: 150%; /* 21px */
+  text-transform: uppercase;
+}
+
+.dialog__icon {
+  position: relative;
+  z-index: 5;
+  inline-size: 39px;
+  fill: var(--button-hover-color);
+  stroke:1px var(--button-hover-color);
+  mix-blend-mode: difference;
+}
+
+.dialog__button {
+  position: relative;
+  block-size: 38px;
+  inline-size: 100%;
+  padding: 9px 17px;
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  transition: box-shadow .3s ease;
+}
+
+.dialog__button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  inline-size: 0%;
+  background-color: var(--accent-color);
+  transition: inline-size .5s ease-in-out;
+}
+
+.dialog__button:hover::after {
+  inline-size: 100%;
+}
+
+.dialog__button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
 /* --------------------HEADER-------------------- */
 
 .header {
@@ -217,7 +285,6 @@
 
 .card_like-section {
   display: flex;
-  gap: 7px;
   align-items: center;
   justify-content: end;
   padding: 25px;
@@ -446,5 +513,9 @@
     inline-size: 21px;
     block-size: 21px;
   }
-
+  
+  .dialog {
+    inline-size: 357px;
+    padding: 30px;
+  }
 }
