--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,37 @@
   background-attachment: fixed;
 }
 
+/* --------------------COMMON_STYLES-------------------- */
+
+.adaptive-width {
+     inline-size: 100%;
+}
+
+.anim-button {
+  position: relative;
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  transition: box-shadow .3s ease;
+}
+
+.anim-button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  inline-size: 0%;
+  background-color: var(--accent-color);
+  transition: inline-size .5s ease-in-out;
+}
+
+.anim-button:hover::after {
+  inline-size: 100%;
+}
+
+.anim-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
 /* --------------------DIALOG-------------------- */
 
 .dialog {
@@ -47,9 +78,6 @@
 }
 
 .dialog__content {
-  /*display: flex;
-  gap: 20px;
-  align-items: center;*/
   display: grid;
   grid-template-columns: repeat(2, minmax(min-content, max-content));
   gap: 20px;
@@ -73,31 +101,9 @@
 }
 
 .dialog__button {
-  position: relative;
   block-size: 38px;
   inline-size: 100%;
   padding: 9px 17px;
-  border: 2px solid var(--accent-color);
-  background-color: var(--bg-color);
-  transition: box-shadow .3s ease;
-}
-
-.dialog__button::after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  inline-size: 0%;
-  background-color: var(--accent-color);
-  transition: inline-size .5s ease-in-out;
-}
-
-.dialog__button:hover::after {
-  inline-size: 100%;
-}
-
-.dialog__button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 /* --------------------HEADER-------------------- */
@@ -106,7 +112,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  inline-size: 100%;
+  /*inline-size: 100%;*/
   background-color: inherit;
   margin: 100px auto 102px;
   font-family: var(--accent-font);
@@ -114,8 +120,8 @@
 }
 
 .header__logo {
-  margin-block-start: 32%;
-  margin-block-end: 20px;
+  margin-block-start: 32.5%;
+  margin-block-end: 21px;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
 }
 
@@ -126,23 +132,22 @@
 
 /* --------------------HEADER-menu-------------------- */
 
-
 .header__theme-menu {
-  margin-block: 25px;
+  margin-block: 23px 24px;
 }
 
 .theme-menu__list {
   display: flex;
   flex-direction: column;
-  gap: 6px;
-  transform: translateX(10px)
+  gap: 12px;
+  transform: translateX(11px)
 }
 
 .theme-menu__button {
   position: relative;
-  background-color: transparent;
   padding: 0;
   border: none;
+  background-color: transparent;
   text-transform: uppercase;
   font-family: var(--accent-font);
   font-size: 14px;
@@ -152,12 +157,12 @@
 
 .theme-menu__button::after {
   content: '';
+  position: absolute;
+  inset-block-end: -2px;
   display: block;
   inline-size: 0%;
   height: 2px;
-  margin-top: 2px;
   background-color: var(--accent-color);
-  /*transform: scaleX(0);*/
   transition: inline-size .3s ease, opacity .3s ease;
 }
 
@@ -167,7 +172,6 @@
 }
 
 .theme-menu__button:focus-visible::after {
-  /*transform: scaleX(1);*/
   inline-size: 100%;
 }
 
@@ -203,11 +207,9 @@
   flex-direction: column;
   gap: 50px;
   margin: auto;
-  inline-size: 100%;
-  border: 2px solid var(--accent-color);
 }
 
-/* --------------------MAIN-card-------------------- */
+/* --------------------CARD-------------------- */
 
 .content__card {
   inline-size: 100%;
@@ -218,14 +220,16 @@
 .card__title {
   padding: 4px 10px;
   font-size: inherit;
+  border: 2px solid var(--accent-color);
 }
 
-/* --------------------MAIN-image-------------------- */
+/* --------------------CARD_image-------------------- */
 
 .card__image__box {
   position: relative;
   display: flex;
-  border-block: 2px solid var(--accent-color);
+  border: 2px solid var(--accent-color);
+
 }
 
 .card__image {
@@ -264,10 +268,12 @@
   }
 }
 
-/* --------------------MAIN-content-------------------- */
+/* --------------------CARD_content-------------------- */
 
 .card__content {
   padding: 25px 30px 0 25px;
+  border: 2px solid var(--accent-color);
+  border-block-end: none;
 }
 
 .card__content-text {
@@ -281,22 +287,25 @@
   margin-block-start: 27px;
 }
 
-/* --------------------MAIN-like-------------------- */
+/* --------------------CARD_like-section-------------------- */
 
 .card_like-section {
   display: flex;
+  gap: 4px;
   align-items: center;
   justify-content: end;
   padding: 25px;
+  border: 2px solid var(--accent-color);
+  border-block-start: none;
 }
 
-/* --------------------LIKE_button-------------------- */
+/* ---------♥♥♥HEART♥♥♥--------- */
 
 .card__heart-button {
   display: flex;
   background-color: inherit;
-  /*background-color: var(--bg-color);*/
   block-size: 38px;
+  padding: 0;
   cursor: unset;
   border: 2px solid transparent;
   transition: border .3s ease;
@@ -310,15 +319,25 @@
   border: 2px solid var(--accent-color);
 }
 
-.like-icon {
-  /*margin: auto;
-  fill: var(--accent-color);*/
+/* 
+
+  !!!! ХОЧУ ОБРАТИТЬ ВНИМАНИЕ !!!
+  
+  решил пойти немного дальше и доработал взаимодействие
+  с иконкой сердца, чтобы все эффекты работали при
+  наведении на само сердце:
+    1. внес изменения в скрипт, чтобы "is-liked" добавлялся
+      к классу "heart"
+    2. перевел всю интерактивность с "like-icon" на "heart",
+      то есть на силует сердца
+
+*/
+
+.heart {
   cursor: pointer;
 }
 
-/* ---------♥♥♥HEART♥♥♥--------- */
-
-.like-icon.is-liked .heart {
+.heart.is-liked {
   transform-origin: 50% 50%;
   animation: scale .3s ease-in alternate .1s;
 }
@@ -336,17 +355,17 @@
   transition: fill .3s ease .03s;
 }
 
-.like-icon:hover .core {
+.heart:hover .core {
   fill: var(--accent-color);
   transition: fill .3s ease;
 }
 
-.like-icon:active .core {
+.heart:active .core {
   fill: #FF0000;
   transition: fill .3s ease;
 }
 
-.like-icon.is-liked .core {
+.heart.is-liked .core {
   fill: #FF0000;
   transition: fill .3s ease;
 }
@@ -357,17 +376,17 @@
   transition: fill .3s ease;
 }
 
-.like-icon:hover .main-body {
+.heart:hover .main-body {
   fill: var(--accent-color);
   transition: fill .3s ease .05s;
 }
 
-.like-icon:active .main-body {
+.heart:active .main-body {
   fill: #FF0000;
   transition: fill .3s ease .05s;
 }
 
-.like-icon.is-liked .main-body {
+.heart.is-liked .main-body {
   fill: #FF0000;
   transition: fill .3s ease .05s;
 }
@@ -378,7 +397,7 @@
   transition: fill .3s ease;
 }
 
-.like-icon.is-liked .contour {
+.heart.is-liked .contour {
   fill: #FF0000;
   transition: fill .3s ease .06s;
 }
@@ -389,7 +408,7 @@
   opacity: 0;
 }
 
-.like-icon.is-liked .sparks {
+.heart.is-liked~.sparks {
   animation: opacity .3s ease-in alternate .2s;
 }
 
@@ -402,31 +421,9 @@
 /* --------------------LIKE_button-------------------- */
 
 .card__like-button {
-  position: relative;
-  inline-size: 130px;
   block-size: 38px;
+  inline-size: 130px;
   padding: 9px 17px;
-  border: 2px solid var(--accent-color);
-  background-color: var(--bg-color);
-  transition: box-shadow .3s ease;
-}
-
-.card__like-button::after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  inline-size: 0%;
-  background-color: var(--accent-color);
-  transition: inline-size .5s ease-in-out;
-}
-
-.card__like-button:hover::after {
-  inline-size: 100%;
-}
-
-.card__like-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 .button__text {
@@ -444,39 +441,16 @@
 
 .footer {
   display: flex;
-  inline-size: 100%;
   margin: auto;
 }
 
 .save-button {
-  position: relative;
   display: flex;
   flex-direction: column;
   gap: 8px;
   align-items: center;
   margin: 52px auto 100px;
   padding: 15px 20px;
-  border: 2px solid var(--accent-color);
-  background-color: var(--bg-color);
-  transition: box-shadow .3s ease;
-}
-
-.save-button:after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  inline-size: 0%;
-  background-color: var(--accent-color);
-  transition: inline-size .5s ease-in-out;
-}
-
-.save-button:hover::after {
-  inline-size: 100%;
-}
-
-.save-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 .save-button-icon {
@@ -492,12 +466,10 @@
 /* --------------------MEDIA-------------------- */
 
 @media(width > 376px) {
-  
-  .header,
-  .content,
-  .footer {
-    inline-size: 48.5%;
-    max-inline-size: 1440px;
+
+  .adaptive-width {
+     inline-size: 48.5%;
+     max-inline-size: 1440px;
   }
 
   .header__logo {
