--- a/styles/themes.css
+++ b/styles/themes.css
@@ -10,6 +10,7 @@
   --bg-color: #FFF;
   --accent-color: #000;
   --button-hover-color: #FFF;
+  --heart-color: #FF0000;
   --bg-image-color_1: #d3d3d3;
   --bg-image-color_2: #e7e7e7;
   --bg-image-color_3: #1a1a1a;
@@ -21,6 +22,7 @@
   --bg-color: #000;
   --accent-color: #00CC14;
   --button-hover-color: #00CC14;
+  --heart-color: #FF0000;
   --bg-image-color_1: #000;
   --bg-image-color_2: #007f0c;
   --bg-image-color_3: #004306;
@@ -34,6 +36,7 @@
       --bg-color: #000;
       --accent-color: #00CC14;
       --button-hover-color: #00CC14;
+      --heart-color: #FF0000;
       --bg-image-color_1: #000;
       --bg-image-color_2: #007f0c;
       --bg-image-color_3: #004306;
