--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,12 +2,13 @@
 
 :root {
   --main-font: 'Inter-Variable', sans-serif;
-  --accent-font: 'PressStart2P', sans-serif;
+  --accent-font: 'PressStart2P', fantasy;
   --title-font-weight: 700;
   --text-font-weight: 400;
   --bg-color: #FFF;
   --accent-color: #000;
   --button-hover-color: #FFF;
+  --heart-color: #FF0000;
   --bg-image-color_1: #d3d3d3;
   --bg-image-color_2: #e7e7e7;
   --bg-image-color_3: #1a1a1a;
