--- a/styles/animations.css
+++ b/styles/animations.css
@@ -26,7 +26,7 @@
 
 /* ---------♥♥♥HEART♥♥♥--------- */
 
-.heart.is-liked {
+.like-icon.is-liked {
     transform-origin: 50% 50%;
     animation: scale .3s ease-in alternate .1s;
 }
@@ -44,17 +44,17 @@
   transition: fill .3s linear .03s;
 }
 
-.heart:hover .core {
+.like-icon:hover .core {
   fill: var(--accent-color);
   transition: fill .3s linear;
 }
 
-.heart:active .core {
+.like-icon:active .core {
   fill: var(--heart-color);
   transition: fill .3s linear;
 }
 
-.heart.is-liked .core {
+.like-icon.is-liked .core {
   fill: var(--heart-color);
   transition: fill .3s linear;
 }
@@ -65,17 +65,17 @@
   transition: fill .3s linear;
 }
 
-.heart:hover .main-body {
+.like-icon:hover .main-body {
   fill: var(--accent-color);
   transition: fill .3s linear .05s;
 }
 
-.heart:active .main-body {
+.like-icon:active .main-body {
   fill: var(--heart-color);
   transition: fill .3s linear .05s;
 }
 
-.heart.is-liked .main-body {
+.like-icon.is-liked .main-body {
   fill: var(--heart-color);
   transition: fill .3s linear .05s;
 }
@@ -86,7 +86,7 @@
   transition: fill .3s linear;
 }
 
-.heart.is-liked .contour {
+.like-icon.is-liked .contour {
   fill: var(--heart-color);
   transition: fill .3s linear .06s;
 }
@@ -97,7 +97,7 @@
   opacity: 0;
 }
 
-.heart.is-liked~.sparks {
+.like-icon.is-liked .sparks {
 
   /* в рекомендациях указана задержка в 0.1s */
   
