--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,8 @@
 */
 
 .page {
-  /*display: flex;
-  flex-direction: column;*/
-  min-inline-size: 320px;  min-block-size: 100dvb;
+  min-inline-size: 320px;
+  min-block-size: 100dvb;
   font-family: var(--main-font);
   font-variation-settings: 'wght' var(--text-font-weight);
   color: var(--accent-color);
@@ -346,11 +345,6 @@
 }
 
 /* --------------------SAVE_BUTTON-------------------- */
-
-/* .footer {
-  display: flex;
-  margin: auto;
-} */
 
 .save-button {
   display: flex;
